Implementações de Rotas

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -55,7 +55,7 @@
 
                     <div class="d-flex justify-content-center">
 
-                        <button type="submit" class="btn btn-danger bd mr-4">Cancelar</button>
+                        <button type="submit" class="btn btn-danger bd mr-4" routerLink="/entrar">Cancelar</button>
                         <button type="submit" class="btn btn-success bd mr-4">Entrar</button>
 
                     </div>
