--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -14,13 +14,13 @@
 
                     <div class="form-group">
                         <label for="nome"></label>
-                        <input class="form-control bd bg-m" type="text" name="nome" id="nome" placeholder="Nome">
+                        <input [(ngModel)]='user.nome' class="form-control bd bg-m" type="text" name="nome" id="nome" placeholder="Nome">
                     </div>
 
 
                     <div class="form-group">
                         <label for="usuario"></label>
-                        <input class="form-control bd bg-m" type="text" name="usuario" id="usuario"
+                        <input [(ngModel)]='user.usuario' class="form-control bd bg-m" type="text" name="usuario" id="usuario"
                             placeholder="email@exemplo.com">
                     </div>
 
@@ -28,24 +28,24 @@
 
                     <div class="form-group">
                         <label for="foto"></label>
-                        <input class="form-control bd bg-m" type="text" name="foto" id="foto"
+                        <input [(ngModel)]='user.foto' class="form-control bd bg-m" type="text" name="foto" id="foto"
                             placeholder="Link da foto">
                     </div>
 
                     <div class="form-group">
                         <label for="senha"></label>
-                        <input class="form-control bd bg-m" type="password" name="senha" id="senha" placeholder="Senha">
+                        <input (input)='confirmSenha($event)' class="form-control bd bg-m" type="password" name="senha" id="senha" placeholder="Senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmSenha"></label>
-                        <input class="form-control bd bg-m" type="password" name="confirmSenha" id="confirmSenha"
+                        <input [(ngModel)]='user.senha' class="form-control bd bg-m" type="password" name="confirmSenha" id="confirmSenha"
                             placeholder="Confirmar Senha">
                     </div>
 
                     <div class="form-group">
                         <label for="tipo"><b></b></label>
-                        <select class="form-control bd bg-m" name="tipo" id="tipo">
+                        <select class="form-control bd bg-m" name="tipo" id="tipo" (change)='tipoUser($event)'>
                             <option>Selecione o usuário</option>
                             <option value="normal">Normal</option>
                             <option value="adm">Administrador</option>
@@ -56,7 +56,7 @@
                     <div class="d-flex justify-content-center">
 
                         <button type="submit" class="btn btn-danger bd mr-4" routerLink="/entrar">Cancelar</button>
-                        <button type="submit" class="btn btn-success bd mr-4">Entrar</button>
+                        <button type="submit" class="btn btn-success bd mr-4" (click)='cadastrar()'>Cadastrar</button>
 
                     </div>
 
