--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -11,19 +11,19 @@
                 
                     <div class="form-group">
                         <label for="usuario"></label>
-                        <input class="form-control bd bg-m" type="text" name="usuario" id="usuario"
+                        <input [(ngModel)]='userLogin.usuario' class="form-control bd bg-m" type="text" name="usuario" id="usuario"
                         placeholder="Usuário">
                     </div>
 
                        
                     <div class="form-group">
                         <label for="senha"></label>
-                        <input class="form-control bd bg-m" type="password" name="senha" id="senha"
+                        <input [(ngModel)]='userLogin.senha' class="form-control bd bg-m" type="password" name="senha" id="senha"
                         placeholder="Senha">
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success bd">Entrar</button>
+                        <button type="submit" class="btn btn-success bd" (click)='entrar()'>Entrar</button>
                     </div>
                   
                     <hr class="mt-5 mb-5">
