--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small  bg-warning pt-4">
+<footer class="page-footer font-small  bg-info pt-4">
  <div class="container">
     <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
