Implementação de get e post de temas

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -81,7 +81,7 @@
                 <div class="modal-body">
 
                 <div class="form-group">
-                    <label for="titulo">text</label>
+                    <label for="titulo">Titulo</label>
                     <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
                  </div>
 
