--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -34,7 +34,7 @@
                     data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
                     aria-selected="true">Todas as Postagens </a>
 
-                <a (click)="findByIdUser" class="nav-item nav-link text-secudary font-weight-bold" id="nav-minhasPostagens-tab"
+                <a  (click)="findByIdUser()" class="nav-item nav-link text-secudary font-weight-bold" id="nav-minhasPostagens-tab"
                     data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens"
                     aria-selected="false">Minhas
                     Postagens</a>
@@ -66,18 +66,18 @@
             </div>
 
             <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens">
+             
                 <div class="card-columns">
 
                     <div class="card text-center" *ngFor='let item of user.postagem'>
                         <div class="card-body">
                             <h5 class="card-title m-0">{{item.titulo}}</h5>
-                            <small class="text-muted ">Tema: {{item.tema.descricao}}</small>
+                            <small class="text-muted "> Tema: {{item.tema.descricao}}</small>
                             <p class="card-text mt-3">{{item.texto}}</p>
                             <p class="card-text"><small class="text-muted">
                                 {{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH/mm'}}</small></p>
-
-                                <a [routerLink]="['/postagem-edit', item.id]" class="btn btn-danger mr-3">Editar</a>
-                                <a [routerLink]="['/postagem-delete', item.id]" class="btn btn-outline-dark">Apagar</a>
+                                <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+                                <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
                         </div>
                     </div>
 
@@ -91,6 +91,7 @@
                     <div class="card text-center" *ngFor='let item of tema.postagem'>
                         <div class="card-body">
                             <h5 class="card-title m-0">{{item.titulo}}</h5>
+                            
                             
                             <p class="card-text mt-3">{{item.texto}}</p>
                             <p class="card-text"><small class="text-muted">
