--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -49,13 +49,13 @@
             <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens">
                 <div class="card-columns">
 
-                    <div class="card text-center" *ngFor='let item of listaPostagem'>
+                    <div class="card text-center"
+                     *ngFor='let item of listaPostagem | orderBy: key : reverse'>
                         <div class="card-body">
                             <h5 class="card-title m-0">{{item.titulo}}</h5>
                             <small class="text-muted ">Tema: {{item.tema.descricao}}</small>
                             <p class="card-text mt-3">{{item.texto}}</p>
-                     
-
+    
                             <p class="card-text"><small class="text-muted">
                                 by: {{item.usuario.nome}}</small></p>
                         </div>
@@ -68,7 +68,8 @@
              
                 <div class="card-columns">
 
-                    <div class="card text-center" *ngFor='let item of user.postagem'>
+                    <div class="card text-center" 
+                    *ngFor='let item of user.postagem | orderBy: key : reverse'>
                         <div class="card-body">
                             <h5 class="card-title m-0">{{item.titulo}}</h5>
                             <small class="text-muted "> Tema: {{item.tema.descricao}}</small>
@@ -84,7 +85,8 @@
             </div>
 
             <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema">
-                <div class="card-columns" *ngFor="let tema of listaTemas">
+                <div class="card-columns" 
+                *ngFor="let tema of listaTemas | orderBy: key : reverse">
 
                     <div class="card text-center" *ngFor='let item of tema.postagem'>
                         <div class="card-body">
