--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -47,8 +47,17 @@
         <div class="tab-content mt-5" id="nav-tabContent">
 
             <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens">
-                <div class="card-columns">
 
+                <div class="row d-flex justify-content-center mt-5 mb-5">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input type="text-center" class="form-control" id="titulo"
+                             placeholder="Digite um título de postagem para pesquisar" [(ngModel)]="tituloPost" (keyup)="findByTituloPostagem()">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="card-columns">
                     <div class="card text-center"
                      *ngFor='let item of listaPostagem | orderBy: key : reverse'>
                         <div class="card-body">
@@ -85,6 +94,18 @@
             </div>
 
             <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema">
+              
+                <div class="row d-flex justify-content-center mt-5 mb-5">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input type="text-center" class="form-control" id="tema"
+                             placeholder="Digite um tema para pesquisar" [(ngModel)]="tituloPost" (keyup)="findByNomeTema()">
+                        </div>
+                    </div>
+
+                </div>
+              
+              
                 <div class="card-columns" 
                 *ngFor="let tema of listaTemas | orderBy: key : reverse">
 
