Implementações de adm

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -14,7 +14,7 @@
                 <div class="col-md-6">
                     <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova
                         Postagem</button>
-                    <a class="btn btn-outline-light" href="">Ver Postagens</a>
+                    <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
                 </div>
             </div>
 
